# git-hist

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mise.toml
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
src/: args.rs
src/app/: commit.rs  controller.rs  dashboard.rs  diff.rs  git.rs  history.rs  mod.rs  state.rs  terminal.rs
tests/: integration.rs
