[package]
authors = ["Ark <target.ark@gmail.com>"]
categories = ["command-line-utilities"]
description = "A CLI tool to quickly browse the git history of files on a terminal"
edition = "2021"
keywords = ["git", "cli", "terminal", "diff"]
license = "MIT"
name = "git-hist"
readme = "README.md"
repository = "https://github.com/karbassi/git-hist"
version = "1.1.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "4", features = ["wrap_help", "derive"]}
crossterm = "0.28"
git2 = {version = "0.14", features = ["vendored-openssl"]}
itertools = "0.10"
similar = {version = "2.1", features = ["bytes", "inline"]}
ratatui = {version = "0.29", default-features = false, features = ["crossterm"]}

[[bin]]
name = "git-hist"
path = "src/bin/main.rs"
